Fix HTTP 404 page not responsive - Fixes https://github.com/kamilmielnik/scrabble-solver/issues/258

--- a/packages/scrabble-solver/src/components/NotFound/NotFound.module.scss
+++ b/packages/scrabble-solver/src/components/NotFound/NotFound.module.scss
@@ -1,3 +1,5 @@
+@import 'styles/mixins';
+
 .notFound {
   display: flex;
   align-items: center;
@@ -11,18 +13,25 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: var(--spacing--xxl);
+  padding: var(--spacing--l);
 }
 
 .icon {
-  $size: 204px;
+  --size: 200px;
 
-  height: $size;
-  width: $size;
+  height: var(--size);
+  width: var(--size);
   margin-bottom: var(--spacing--xxl);
   color: var(--color--red);
+
+  @include media('<xs') {
+    --size: 50%;
+
+    margin-bottom: var(--spacing--xl);
+  }
 }
 
 .tiles {
+  max-width: 100%;
   height: 60px;
 }
